--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
+    <!-- FONT AWSOME -->
+    <script src="https://kit.fontawesome.com/fbb437ebc0.js" crossorigin="anonymous"></script>
+    
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
